--- a/app/src/app/authenticated/messages/left-side-bar/contact/contact.component.html
+++ b/app/src/app/authenticated/messages/left-side-bar/contact/contact.component.html
@@ -1,122 +1,17 @@
 <div class="main">
 <h4>Contact</h4>
     <div class="items">
-
-        <div class="item">
+        <!-- will be array inside array -->
+        <!-- work with foreach wor just for inside for-->
+        <div *ngFor="let contact of contactService.contacts[0]" class="item">
             <div class="item-image">
                 <img src="/assets/icons/contact.png" width="50" height="50">
             </div>
             <div class="item-name">
-                hazma jaziri
+                {{ contact.firstName }}
+                {{ contact.lastName }}
             </div>    
         </div>
-
-        <!-- delete -->
-        <div class="item">
-            <div class="item-image">
-                <img src="/assets/icons/contact.png" width="50" height="50">
-            </div>
-            <div class="item-name">
-                hazma jaziri
-            </div>    
-        </div>
-        <div class="item">
-            <div class="item-image">
-                <img src="/assets/icons/contact.png" width="50" height="50">
-            </div>
-            <div class="item-name">
-                hazma jaziri
-            </div>    
-        </div>
-        <div class="item">
-            <div class="item-image">
-                <img src="/assets/icons/contact.png" width="50" height="50">
-            </div>
-            <div class="item-name">
-                hazma jaziri
-            </div>    
-        </div>
-        <div class="item">
-            <div class="item-image">
-                <img src="/assets/icons/contact.png" width="50" height="50">
-            </div>
-            <div class="item-name">
-                hazma jaziri
-            </div>    
-        </div>
-        <div class="item">
-            <div class="item-image">
-                <img src="/assets/icons/contact.png" width="50" height="50">
-            </div>
-            <div class="item-name">
-                hazma jaziri
-            </div>    
-        </div>
-        <div class="item">
-            <div class="item-image">
-                <img src="/assets/icons/contact.png" width="50" height="50">
-            </div>
-            <div class="item-name">
-                hazma jaziri
-            </div>    
-        </div>
-        <div class="item">
-            <div class="item-image">
-                <img src="/assets/icons/contact.png" width="50" height="50">
-            </div>
-            <div class="item-name">
-                hazma jaziri
-            </div>    
-        </div>
-        <div class="item">
-            <div class="item-image">
-                <img src="/assets/icons/contact.png" width="50" height="50">
-            </div>
-            <div class="item-name">
-                hazma jaziri
-            </div>    
-        </div>
-        <div class="item">
-            <div class="item-image">
-                <img src="/assets/icons/contact.png" width="50" height="50">
-            </div>
-            <div class="item-name">
-                hazma jaziri
-            </div>    
-        </div>
-        <div class="item">
-            <div class="item-image">
-                <img src="/assets/icons/contact.png" width="50" height="50">
-            </div>
-            <div class="item-name">
-                hazma jaziri
-            </div>    
-        </div>
-        <div class="item">
-            <div class="item-image">
-                <img src="/assets/icons/contact.png" width="50" height="50">
-            </div>
-            <div class="item-name">
-                hazma jaziri
-            </div>    
-        </div>
-        <div class="item">
-            <div class="item-image">
-                <img src="/assets/icons/contact.png" width="50" height="50">
-            </div>
-            <div class="item-name">
-                hazma jaziri
-            </div>    
-        </div>
-        <div class="item">
-            <div class="item-image">
-                <img src="/assets/icons/contact.png" width="50" height="50">
-            </div>
-            <div class="item-name">
-                hazma jaziri
-            </div>    
-        </div>
-        <!-- delete -->
 
     </div>
 
