--- a/app/src/app/authenticated/messages/left-side-bar/chat/chat.component.html
+++ b/app/src/app/authenticated/messages/left-side-bar/chat/chat.component.html
@@ -1,313 +1,28 @@
 <div class="main">
         <h4>Messages</h4>
+
     <div class="items">
-        <div class="item">
+
+
+        <div *ngFor="let chat of chatService.chats" class="item">
             <div class="item-image">
                 <img src="/assets/icons/contact.png" width="50" height="50">
             </div>
 
             <div class="item-detail">
                 <div class="item-name">
-                    hazma jaziri
+                    {{ chat[0].users[0].firstName }}
+                    {{ chat[0].users[0].lastName }}
                 </div>
                 <div class="item-last-msg">
-                    <div>last msg</div>
-                    <div>13:11</div>
+                    <div>{{ chat[0].msg[0].body }}</div>
+                    <div>{{ chat[0].msg[0].createdAt | date }}</div>
                 </div>
             </div>
 
         </div>
 
-        <!-- delete -->
-        <div class="item">
-            <div class="item-image">
-                <img src="/assets/icons/contact.png" width="50" height="50">
-            </div>
-
-            <div class="item-detail">
-                <div class="item-name">
-                    hazma jaziri
-                </div>
-                <div class="item-last-msg">
-                    <div>last msg</div>
-                    <div>13:11</div>
-                </div>
-            </div>
-
-        </div>
-        <div class="item">
-            <div class="item-image">
-                <img src="/assets/icons/contact.png" width="50" height="50">
-            </div>
-
-            <div class="item-detail">
-                <div class="item-name">
-                    hazma jaziri
-                </div>
-                <div class="item-last-msg">
-                    <div>last msg</div>
-                    <div>13:11</div>
-                </div>
-            </div>
-
-        </div>
-        <div class="item">
-            <div class="item-image">
-                <img src="/assets/icons/contact.png" width="50" height="50">
-            </div>
-
-            <div class="item-detail">
-                <div class="item-name">
-                    hazma jaziri
-                </div>
-                <div class="item-last-msg">
-                    <div>last msg</div>
-                    <div>13:11</div>
-                </div>
-            </div>
-
-        </div>
-        <div class="item">
-            <div class="item-image">
-                <img src="/assets/icons/contact.png" width="50" height="50">
-            </div>
-
-            <div class="item-detail">
-                <div class="item-name">
-                    hazma jaziri
-                </div>
-                <div class="item-last-msg">
-                    <div>last msg</div>
-                    <div>13:11</div>
-                </div>
-            </div>
-
-        </div>
-        <div class="item">
-            <div class="item-image">
-                <img src="/assets/icons/contact.png" width="50" height="50">
-            </div>
-
-            <div class="item-detail">
-                <div class="item-name">
-                    hazma jaziri
-                </div>
-                <div class="item-last-msg">
-                    <div>last msg</div>
-                    <div>13:11</div>
-                </div>
-            </div>
-
-        </div>
-        <div class="item">
-            <div class="item-image">
-                <img src="/assets/icons/contact.png" width="50" height="50">
-            </div>
-
-            <div class="item-detail">
-                <div class="item-name">
-                    hazma jaziri
-                </div>
-                <div class="item-last-msg">
-                    <div>last msg</div>
-                    <div>13:11</div>
-                </div>
-            </div>
-
-        </div>
-        <div class="item">
-            <div class="item-image">
-                <img src="/assets/icons/contact.png" width="50" height="50">
-            </div>
-
-            <div class="item-detail">
-                <div class="item-name">
-                    hazma jaziri
-                </div>
-                <div class="item-last-msg">
-                    <div>last msg</div>
-                    <div>13:11</div>
-                </div>
-            </div>
-
-        </div>
-        <div class="item">
-            <div class="item-image">
-                <img src="/assets/icons/contact.png" width="50" height="50">
-            </div>
-
-            <div class="item-detail">
-                <div class="item-name">
-                    hazma jaziri
-                </div>
-                <div class="item-last-msg">
-                    <div>last msg</div>
-                    <div>13:11</div>
-                </div>
-            </div>
-
-        </div>
-        <div class="item">
-            <div class="item-image">
-                <img src="/assets/icons/contact.png" width="50" height="50">
-            </div>
-
-            <div class="item-detail">
-                <div class="item-name">
-                    hazma jaziri
-                </div>
-                <div class="item-last-msg">
-                    <div>last msg</div>
-                    <div>13:11</div>
-                </div>
-            </div>
-
-        </div>
-        <div class="item">
-            <div class="item-image">
-                <img src="/assets/icons/contact.png" width="50" height="50">
-            </div>
-
-            <div class="item-detail">
-                <div class="item-name">
-                    hazma jaziri
-                </div>
-                <div class="item-last-msg">
-                    <div>last msg</div>
-                    <div>13:11</div>
-                </div>
-            </div>
-
-        </div>
-        <div class="item">
-            <div class="item-image">
-                <img src="/assets/icons/contact.png" width="50" height="50">
-            </div>
-
-            <div class="item-detail">
-                <div class="item-name">
-                    hazma jaziri
-                </div>
-                <div class="item-last-msg">
-                    <div>last msg</div>
-                    <div>13:11</div>
-                </div>
-            </div>
-
-        </div>
-        <div class="item">
-            <div class="item-image">
-                <img src="/assets/icons/contact.png" width="50" height="50">
-            </div>
-
-            <div class="item-detail">
-                <div class="item-name">
-                    hazma jaziri
-                </div>
-                <div class="item-last-msg">
-                    <div>last msg</div>
-                    <div>13:11</div>
-                </div>
-            </div>
-
-        </div>
-        <div class="item">
-            <div class="item-image">
-                <img src="/assets/icons/contact.png" width="50" height="50">
-            </div>
-
-            <div class="item-detail">
-                <div class="item-name">
-                    hazma jaziri
-                </div>
-                <div class="item-last-msg">
-                    <div>last msg</div>
-                    <div>13:11</div>
-                </div>
-            </div>
-
-        </div>
-        <div class="item">
-            <div class="item-image">
-                <img src="/assets/icons/contact.png" width="50" height="50">
-            </div>
-
-            <div class="item-detail">
-                <div class="item-name">
-                    hazma jaziri
-                </div>
-                <div class="item-last-msg">
-                    <div>last msg</div>
-                    <div>13:11</div>
-                </div>
-            </div>
-
-        </div>
-        <div class="item">
-            <div class="item-image">
-                <img src="/assets/icons/contact.png" width="50" height="50">
-            </div>
-
-            <div class="item-detail">
-                <div class="item-name">
-                    hazma jaziri
-                </div>
-                <div class="item-last-msg">
-                    <div>last msg</div>
-                    <div>13:11</div>
-                </div>
-            </div>
-
-        </div>
-        <div class="item">
-            <div class="item-image">
-                <img src="/assets/icons/contact.png" width="50" height="50">
-            </div>
-
-            <div class="item-detail">
-                <div class="item-name">
-                    hazma jaziri
-                </div>
-                <div class="item-last-msg">
-                    <div>last msg</div>
-                    <div>13:11</div>
-                </div>
-            </div>
-
-        </div>
-        <div class="item">
-            <div class="item-image">
-                <img src="/assets/icons/contact.png" width="50" height="50">
-            </div>
-
-            <div class="item-detail">
-                <div class="item-name">
-                    hazma jaziri
-                </div>
-                <div class="item-last-msg">
-                    <div>last msg</div>
-                    <div>13:11</div>
-                </div>
-            </div>
-
-        </div>
-        <div class="item">
-            <div class="item-image">
-                <img src="/assets/icons/contact.png" width="50" height="50">
-            </div>
-
-            <div class="item-detail">
-                <div class="item-name">
-                    hazma jaziri
-                </div>
-                <div class="item-last-msg">
-                    <div>last msg</div>
-                    <div>13:11</div>
-                </div>
-            </div>
-
-        </div>
-        <!-- delete -->
+        
     </div>
 
 </div>
