--- a/app/src/app/authenticated/messages/body-message/body-message.component.html
+++ b/app/src/app/authenticated/messages/body-message/body-message.component.html
@@ -1,7 +1,7 @@
 <div class="main">
 
     <div class="header">
-        <h2> Name prenom </h2>
+        <h2> {{ messageService.currentUserName }} </h2>
     </div>
 
 
