--- a/app/src/app/authenticated/messages/left-side-bar/chat/chat.component.html
+++ b/app/src/app/authenticated/messages/left-side-bar/chat/chat.component.html
@@ -4,7 +4,7 @@
     <div class="items">
 
 
-        <div *ngFor="let chat of chatService.chats"  (click)="loadMessageBody(chat.users[0]._id)" class="item">
+        <div *ngFor="let chat of chatService.chats"  (click)="loadMessageBody(chat.users[0]._id, chat.users[0].firstName+' '+chat.users[0].lastName)" class="item">
             <div class="item-image">
                 <img src="/assets/icons/contact.png" width="50" height="50">
             </div>
