--- a/app/src/app/authenticated/messages/left-side-bar/favorite/favorite.component.html
+++ b/app/src/app/authenticated/messages/left-side-bar/favorite/favorite.component.html
@@ -2,7 +2,7 @@
         <h4>Favorites</h4>
             <div class="items">
                 <!--sfq -->
-                <div *ngFor="let fav of favoriteService.favorites"  (click)="loadMessageBody(fav._id)" class="item">
+                <div *ngFor="let fav of favoriteService.favorites"  (click)="loadMessageBody(fav._id, fav.firstName+' '+fav.lastName)" class="item">
                     <div class="item-image">
                         <img src="/assets/icons/contact.png" width="50" height="50">
                     </div>
