end | still some bugs

--- a/app/src/app/unauthenticated/signup/signup.component.html
+++ b/app/src/app/unauthenticated/signup/signup.component.html
@@ -75,7 +75,7 @@
                     Birthday:
                 </div>
                 <div class="form-item-control">
-                    <input formControlName="birthday" type="text" autofocus class="form-item form-item-input" placeholder="DD/MM/YYYY">
+                    <input formControlName="birthday" type="text" autofocus class="form-item form-item-input" placeholder="MM/DD/YYYY">
                 </div>
                 <div  *ngIf="form.controls.birthday.invalid && form.controls.birthday.dirty" class="form-item-error">
                     <img src="/assets/icons/error.png" width="20px" height="20px">
